# ProjectAIli

./: Cargo.toml  README.md  config.yaml  go.mod  go.sum  main.go  system_prompt.txt
src/: main.rs
