[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
console = "0.15.8"
dialoguer = "0.11.0"
futures-util = "0.3.30"
indicatif = "0.17.8"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
tiktoken-rs = "0.5.9"
tokio = { version = "1.39.2", features = ["full"] }
